# nobutt

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  index.html  license.txt  main.py  mock.py  package-lock.json  package.json  pyproject.toml  schema.json  test.py
.githooks/: commit-msg
.github/hooks/: commit-msg
.github/workflows/: branch-issue-names-check.yml  check-branch-name.yml  check-commit-messages.yml  ci.yml  commit-message-check.yml  naming-check.yml
nobutt/: __init__.py  device.py  messages.py  server.py
nobutt/spec/: base.py
scripts/: check_branch_name.sh  check_commit_messages.sh  check_hooks.sh  datamodel_generate.py  json2ts.sh  toolz.sh  ts2js.sh
spec/messages/v3/: messages.json
spec/messages/v3/enumeration/: device_added.json  device_list.json  device_removed.json  scanning_finished.json  start_scanning.json  stop_scanning.json
spec/messages/v3/generic_devices/: scalar_cmd.json  stop_all_devices.json  stop_device_cmd.json
spec/messages/v3/handshake/: request_server_info.json  server_info.json
spec/messages/v3/status/: error.json  ok.json  ping.json
spec/messages/v3/types/: device.json  id.json  message_version.json
tests/: __init__.py
tests/integration/: __init__.py  test_server.py
web/: index.css  index.html  index.js  index.ts  package-lock.json  package.json  schema.ts  vite.config.js
web/components/: console.js  console.ts  main.ts  message-handler.js  message-handler.ts  schema.ts  tab-selector.js  tab-selector.ts  toy.js  toy.ts  websocket.js  websocket.ts
