[tool.poetry]
name = "nobutt"
version = "0.1.0"
description = "Buttplug.io Server mock to test your applications without a physical device"
authors = ["Mihail Butvin <butvin.mihail@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"
pytest = "^8.2.2"
mypy = "^1.10.0"
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
